# Interview-Case-Property-Friends

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: training.yaml
notebooks/: Property-Friends-basic-model.ipynb
src/property_friends/: __init__.py  cli.py
src/property_friends/api/: config.py  main.py  schemas.py
src/property_friends/config/: training.py
src/property_friends/data_sources/: base.py  csv_source.py  factory.py
src/property_friends/evaluation/: metrics.py
src/property_friends/pipeline/: model.py
src/property_friends/service/: model_service.py
src/property_friends/training/: pipeline_runner.py
